# TrivalRayTracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REPORT.md  run_all.ps1  run_all.sh
include/: aabb.hpp  box.hpp  bvh.hpp  camera.hpp  constant_medium.hpp  curve.hpp  cylinder.hpp  group.hpp  hit.hpp  hit_kdtree.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  moving_sphere.hpp  object3d.hpp  onb.hpp  pdf.hpp  perlin.hpp  plane.hpp  ray.hpp  ray_tracer.hpp  rectangle.hpp  render.hpp  revsurface.hpp  scene_generator.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  transform.hpp  triangle.hpp  utils.hpp
src/: bvh.cpp  main.cpp  mesh.cpp  pdf.cpp  scene_parser.cpp  texture.cpp
